--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+:root {
+  --header-bg-color: #0b2f47;
+  --bg-color-button: #007bff;
+  --hover-bg-color-button: #0056b3;
+}
