--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,10 +2,14 @@
 
 .footer__catalogo {
   display: flex;
+  width: 100%;
+  height: 15%;
   background-color: var(--header-bg-color);
   color: var(--text-color);
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  position: absolute;
   gap: 10px;
 }
 
