--- a/src/pages/newProduto/newProduto.css
+++ b/src/pages/newProduto/newProduto.css
@@ -1,5 +1,7 @@
+@import "../../App.css";
+
 .newProduto__title {
-  color: #333;
+  color: var(--secondery-text-color);
   font-size: 2rem;
   text-align: center;
   margin-top: 20px;
@@ -10,17 +12,18 @@
   justify-content: center;
   text-align: center;
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .btn__produto {
   text-decoration: none;
-  color: white;
-  background-color: #007bff;
+  color: var(--text-color);
+  background-color: var(--bg-color-button);
   padding: 0.5rem 1rem;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .btn__produto:hover {
-  background-color: #0056b3;
+  background-color: var(--hover-bg-color-button);
 }
