--- a/src/pages/produto/produtos.css
+++ b/src/pages/produto/produtos.css
@@ -1,3 +1,5 @@
+@import "../../App.css";
+
 .produto__title {
   font-size: 2rem;
   text-align: center;
@@ -14,13 +16,13 @@
 
 .btn__cadastrar {
   text-decoration: none;
-  color: white;
-  background-color: #007bff;
+  color: var(--text-color);
+  background-color: var(--bg-color-button);
   padding: 0.5rem 1rem;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .btn__cadastrar:hover {
-  background-color: #0056b3;
+  background-color: var(--hover-bg-color-button);
 }
