Adicionando novas opções de cores

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,6 @@
   --hover-bg-color-button: #0056b3;
   --text-color: #ffffff;
   --secondery-text-color: #000000;
+  --third-text-color: #555555;
+  --fourth-text-color: #888888;
 }
