--- a/src/pages/newProduto/newProduto.css
+++ b/src/pages/newProduto/newProduto.css
@@ -5,25 +5,5 @@
   font-size: 2rem;
   text-align: center;
   margin-top: 20px;
-}
-
-.Produto__Link {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.btn__produto {
-  text-decoration: none;
-  color: var(--text-color);
-  background-color: var(--bg-color-button);
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.btn__produto:hover {
-  background-color: var(--hover-bg-color-button);
+  margin-bottom: 20px;
 }
