--- a/src/components/formProduto/formProduto.css
+++ b/src/components/formProduto/formProduto.css
@@ -155,3 +155,16 @@
 .add-product:hover {
   background-color: var(--hover-bg-color-button);
 }
+
+.btn-addProduct {
+  background-color: var(--bg-color-button);
+  color: var(--text-color);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.btn-addProduct:hover {
+  background-color: var(--hover-bg-color-button);
+}
