--- a/src/pages/produto/produtos.css
+++ b/src/pages/produto/produtos.css
@@ -26,3 +26,99 @@
 .btn__cadastrar:hover {
   background-color: var(--hover-bg-color-button);
 }
+
+.produto__cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+}
+
+.produto__card {
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+  padding: 1rem;
+  text-align: center;
+  background-color: var(--card-bg-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.produto__card:hover {
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.produto__img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
+
+.produto__img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.product__name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.product__description {
+  font-size: 1rem;
+  text-align: justify;
+  color: var(--text-secondary-color);
+  margin-bottom: 1rem;
+}
+
+.product__price {
+  font-size: 1.1rem;
+  color: var(--price-color);
+  margin-bottom: 1rem;
+}
+
+.product__seller {
+  font-size: 0.9rem;
+  color: var(--text-secondary-color);
+  margin-bottom: 0.5rem;
+}
+
+.product__phone {
+  font-size: 0.9rem;
+  color: var(--text-secondary-color);
+  margin-bottom: 1rem;
+}
+
+.product__actions {
+  display: flex;
+  justify-content: end;
+  gap: 0.5rem;
+}
+
+.edit__product {
+  text-decoration: none;
+  padding: 0.4rem 0.8rem;
+  color: var(--text-secondary-color);
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.edit__product:hover {
+  color: var(--text-color);
+  background-color: var(--hover-bg-color-button);
+}
+
+.delete__product {
+  border: none;
+  background-color: var(--text-color);
+  padding: 0.4rem 0.8rem;
+  color: var(--text-secondary-color);
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.delete__product:hover {
+  color: var(--text-color);
+  background-color: var(--hover-bg-color-button);
+}
