--- a/src/pages/produto/produtos.css
+++ b/src/pages/produto/produtos.css
@@ -122,3 +122,10 @@
   color: var(--text-color);
   background-color: var(--hover-bg-color-button);
 }
+
+.result__empty {
+  text-align: center;
+  font-size: 1.2rem;
+  color: var(--text-secondary-color);
+  margin-top: 2rem;
+}
