Alterando o alinhamento do texto da descrição do produto para centralizado, e adicionando nova imagem de produto

--- a/src/pages/produto/produtos.css
+++ b/src/pages/produto/produtos.css
@@ -67,7 +67,7 @@
 
 .product__description {
   font-size: 1rem;
-  text-align: justify;
+  text-align: center;
   color: var(--text-secondary-color);
   margin-bottom: 1rem;
 }
